--- a/css/main.css
+++ b/css/main.css
@@ -7,8 +7,8 @@
 
 body{
     width:907px;
-    min-width:905px;
-    max-width:100%;
+    min-width:907px;
+    max-width:907px;
     height:100%;
 
     background:#830810;
