--- a/css/main.css
+++ b/css/main.css
@@ -6,11 +6,11 @@
 */
 
 body{
-    width:907px;
+    width:100%;
     min-width:907px;
     max-width:907px;
-    height:100%;
-
+    transform-origin: 0 0;
+    transform: scale(1.75);
     background:#830810;
 }
 *{margin:0 ;padding:0
@@ -169,7 +169,7 @@ ul li:hover{
     display: inline-block;
     width: 7px;
     height: 7px;
-    background: url('../img/down-icon.png') no-repeat;
+    background: url('../images/down-icon.png') no-repeat;
 }
 .choose-list{
     margin-left: 10%;
